--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
+    "babel-core": "^6.24.0",
     "babel-preset-env": "^1.1.8",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^9.0.1",
