--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "buildLoginBundle": "babel ./client/login ./client/helper --presets react --out-file ./hosted/loginBundle.js",
     "buildAppBundle": "babel ./client/app ./client/helper --presets react --out-file ./hosted/bundle.js",
     "bundle": "npm run buildLoginBundle && npm run buildAppBundle",
+    "buildRosterBundle": "babel ./client/roster ./client/helper --presets react --out-file ./hosted/rosterBundle.js",
     "watchLoginBundle": "babel --watch ./client/login ./client/helper --presets react --out-file ./hosted/loginBundle.js",
     "watchAppBundle": "babel --watch ./client/app ./client/helper --presets react --out-file ./hosted/bundle.js",
+    "watchRosterBundle": "babel --watch ./client/roster ./client/helper --presets react --out-file ./hosted/rosterBundle.js",
     "nodemon": "nodemon --watch ./server ./server/app.js",
     "start": "node ./server/app.js",
     "pretest": "eslint ./server --fix",
